<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.secondlife.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_product_details"
            app:destination="@id/navigation_product_details">

        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_product_details"
        android:name="com.example.secondlife.ui.productDetails.ProductDetailsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/product_details_fragment" >
        <action
            android:id="@+id/action_navigation_product_details_to_navigation_home2"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_myProducts"
        android:name="com.example.secondlife.ui.myProducts.MyProductsFragment"
        android:label="@string/title_myProducts"
        tools:layout="@layout/fragment_my_products" >
        <action
            android:id="@+id/action_navigation_myProducts_to_navigation_product_details"
            app:destination="@id/navigation_product_details" />
        <action
            android:id="@+id/action_navigation_myProducts_to_navigation_addGame"
            app:destination="@id/navigation_addGame" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.secondlife.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.secondlife.ui.login.LoginFragment"
        android:label="@string/connexion"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_addGame"
        android:name="com.example.secondlife.ui.addGame.AddGame"
        android:label="Ajouter un jeu"
        tools:layout="@layout/add_game_fragment" >
        <action
            android:id="@+id/action_navigation_addGame_to_navigation_myProducts"
            app:destination="@id/navigation_myProducts" />
    </fragment>
</navigation>